trunk/Archive2/c6/697cfb43ea99a7/output
main.cpp: In function 'int main()':
main.cpp:15:13: error: unable to deduce 'std::initializer_list<_Tp>' from '<brace-enclosed initializer list>()'
     auto b {};
             ^
main.cpp:15:10: error: cannot deduce actual type for variable 'b' with type 'auto' from initializer list
    auto b {};
         ^ ~~
1 error generated.
